organizations/salesforce/salesforce.css
/*
{{Color_1}}: 215ca0
{{Color_1_Shade}}: #1a4980; (goto http://www.color-hex.com/color/215ca0 ; use the second Shade -- just needs to be a little bit darker.)
{{Color_2}}: 8aaf2a
{{Color_2_Tint}}: #e7efd4; (goto http://www.color-hex.com/color/8aaf2a ; find the color similar to e_e_e_) (Make sure this color is accessible by going to http://accessible-colors.com and checking Color_2_Tint on a background of both Color_1 and Color_2; select the suggested text color that works for both backgrounds)
{{Logo_URL}}: sharptopco.github.io/cloudcard-custom-assets/organizations/salesforce/salesforcelogo.png i.e. www.wingate.edu/wp-content/uploads/2015/06/logo.png
*/

html {
  background: #ffffff;
}

.splash {
  background-color: #ffffff;
}

.splash .loading path {
  fill: #fff;
}

header.header-main {
  background-color: #ffffff;
  border-bottom: 3px solid #00a1e0;
  height:10.5em;
}

.logo {
  background: url('//sharptopco.github.io/cloudcard-custom-assets/organizations/salesforce/salesforcelogo.png') top center no-repeat;
  display: inline-block;
  max-width: 400px !important;
  background-size: contain;
  height: 7em;
}

header.header-page {
  background-color:#8aaf2a;
}

.header-page .tabs li a {
  border-bottom-color:#8aaf2a;
  color: #e7efd4;
}

.header-page .tabs li a:hover,
.header-page .tabs li a:focus
{
  color: #fff;
}

/* Keep this block only if it looks good. */
.header-page .tabs a.active {
    border-bottom-color: #00a1e0;
}

.header-page .buttons button {
  background-color: #00a1e0;
  color: #fff;
}

.header-page button {
  background-color: #8aaf2a;
  color: #fff;
}

.header-page .buttons button:hover,
.header-page .buttons button:focus
{
  background-color: #e7efd4;
  color: #00a1e0;

  /* Alternative if the above doesn't look so great.
  background-color: #8aaf2a;
  color: #fff;
   */
}

.header-page .filters .filter:hover select,
.header-page .filters .filter:focus-within select {
    background-color: #00a1e0;
    color: #fff;
}

.header-page .filters .filter:hover:after,
.header-page .filters .filter:focus-within:after {
    color: #fff;
}

button {
    background-color: #8aaf2a;
}

button:hover,
button:focus {
    background-color: #e7efd4;
}

router-view .buttons button.primary,
#accept-terms,
button.submit-login
{
    background-color: #00a1e0;
}

router-view .buttons button.primary:hover,
router-view .buttons button.primary:focus,
#accept-terms:hover,
#accept-terms:focus,
button.submit-login:hover,
button.submit-login:focus
{
    background-color: #1a4980;
}

.user-info {
    color: #00a1e0;
}

.user-info a {
    color: #8aaf2a;
}

.user-info a:hover,
.user-info a:focus {
    color: #00a1e0;
}

.open-nav {
    color: #ddd;
}

.open-nav:hover,
.open-nav:focus
{
    color: #fff;
}

.admin-links .fa {
    color: #8aaf2a; /*default #007bff*/
}

.admin-links a {
    background: #fff;
    color: #353535;
}

.admin-links a:hover {
    background: #e7efd4;
}

table th,
table td {
    background: #e7efd4;
}

.footer {
    background: #00a1e0;
    border-top: 3px solid #00a1e0;

}

/* Uncomment this block if the organization has a Plus Account.
img.photos--preview {
    border-bottom: 0px;
}
*/

/* Uncomment this block to hide the Download photos button.
   HOWEVER: if the client is downloading photos using an external tool (e.g. RapidCard Elite or the CloudCard Image Server),
	they should be migrated over to using the `EXTERNAL` download strategy rather than hiding the download button.
button.download_button {
	display: none;
}
*/

.sidebar-main {
    background: #ffffff;
    border-right: 3px solid #8aaf2a;
    color: #1a4980;
    height: 780px !important;
    
    h2 { 
      color: #1a4980 !important;
    }	
	
}

